# constraints

./: .gitignore  LICENSE.txt  Makefile  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt
constraints/: __init__.py  base.py  declarative.py  error.py  traversal.py
docs/: index.html
docs/source/: conf.py  index.rst
docs/source/modules/: base.rst  declarative.rst  error.rst  traversal.rst
tests/constraints/: fixtures.py  test_base.py  test_declarative.py  test_error.py  test_traversal.py
