[pep8]
ignore=E402,E712 # avoid checking stuff that pylint checks

[typecheck]
ignored-classes=scoped_session, sessionmaker

[messages control]
disable=missing-docstring,
        invalid-name,
        too-few-public-methods,
        locally-disabled

[report]
exclude_lines =
    if __name__ == .__main__.:

[metadata]
description-file = README.md
